syntax = "proto3";
package user;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/blackhorseya/godine/entity/domain/user/model";

// Address is a value object that represents the address of a user.
message Address {
  // Street is the street address of the user.
  // @gotags: bson:"street"
  string street = 1;

  // City is the city where the user is located.
  // @gotags: bson:"city"
  string city = 2;

  // State is the state where the user is located.
  // @gotags: bson:"state"
  string state = 3;

  // ZipCode is the postal code of the user's location.
  // @gotags: bson:"zip_code"
  string zip_code = 4;
}

// Role is an entity that represents the role of a user.
message Role {
  // ID is the unique identifier of the role.
  // @gotags: bson:"_id"
  string id = 1;

  // Name is the name of the role.
  // @gotags: bson:"name"
  string name = 2;
}

// Account is an entity that represents a user account.
message Account {
  // ID is the unique identifier of the user account.
  // @gotags: bson:"_id"
  string id = 1;

  // Username is the username of the user.
  // @gotags: bson:"username"
  string username = 2;

  // Email is the email address of the user.
  // @gotags: bson:"email"
  string email = 3;

  // Password is the password of the user.
  // @gotags: json:"-" bson:"password"
  string password = 4;

  // AccessToken is the access token of the user.
  // @gotags: bson:"-"
  string access_token = 12;

  // Address is the address of the user.
  // @gotags: bson:"address"
  Address address = 5;

  // IsActive is the status of the user account.
  // @gotags: bson:"is_active"
  bool is_active = 6;

  // Level is the access level of the user account.
  // @gotags: bson:"level"
  uint32 Level = 7;

  // Roles is the list of roles assigned to the user.
  // @gotags: bson:"roles"
  repeated Role roles = 8;

  // SocialIDMap is the map of social IDs of the user.
  // @gotags: bson:"social_id_map"
  map<string, string> socialIDMap = 9;

  // CreatedAt is the creation time of the user account.
  // @gotags: bson:"created_at"
  google.protobuf.Timestamp created_at = 10;

  // UpdatedAt is the update time of the user account.
  // @gotags: bson:"updated_at"
  google.protobuf.Timestamp updated_at = 11;
}
